# BibexPy

./: .env  .env.example  .gitattributes  .gitignore  API_config.json  BibexPy.ipynb  DataProcessor.py  README.md  dev.bat  docker-compose.yml  requirements.txt
.github/workflows/: release.yml
Main/: MergeDB.py  cochrane2xlsx.py  dimensions2xlsx.py  lens2xlsx.py  openAlex2xlsx.py  pubmed2xlsx.py  scp2xlsx.py  xlsx2vos.py
Main/modules/: __init__.py  api_utils.py  file_utils.py  merge_utils.py  ml_utils.py  post_process.py
Workspace/Sample Project/Data/: savedrecs (1).txt  savedrecs (2).txt  savedrecs (3).txt  savedrecs (4).txt  savedrecs (5).txt
apps/api/: .env.example  Dockerfile  config.py  main.py  requirements.txt
apps/api/jobs/: __init__.py  runner.py
apps/api/models/: project.py
apps/api/routers/: audit.py  convert.py  disambiguate.py  downloads.py  enrich.py  export.py  export_folder.py  filter.py  jobs.py  merge.py  prepare.py  projects.py  quality.py  records.py  report.py  settings.py  system.py  tools.py  upload.py
apps/api/services/: analyses.py  audit.py  bibex_adapter.py  bibtex_writer.py  converter.py  enricher.py  exporter.py  filter_engine.py  merger.py  methodology.py  report_export.py  ris_writer.py  smart_merger.py  storage.py
apps/api/services/disambiguation/: __init__.py  blocking.py  cache.py  deepseek_client.py  orcid.py  pipeline.py  similarity.py
apps/api/tests/: test_convert.py  test_disambiguation_loop.py  test_filter_export.py  test_projects.py  test_sample_seed.py  test_smart_merge.py  test_tools.py
apps/web/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/projects/[id]/: layout.tsx
apps/web/app/projects/[id]/convert/: page.tsx
apps/web/app/projects/[id]/disambiguate/: page.tsx
apps/web/app/projects/[id]/enrich/: page.tsx
apps/web/app/projects/[id]/export/: page.tsx
apps/web/app/projects/[id]/merge/: page.tsx
apps/web/app/projects/[id]/records/: page.tsx
apps/web/app/projects/[id]/report/: page.tsx
apps/web/app/projects/[id]/upload/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/tools/: page.tsx
apps/web/components/: ActiveAnalysisHero.tsx  AppShell.tsx  AuditLogPanel.tsx  BorderlineReviewPanel.tsx  BulkActionBar.tsx  Button.tsx  Card.tsx  Dialogs.tsx  DisambiguatePanel.tsx  FilterPanel.tsx  FolderPickerModal.tsx  FullScreenLoader.tsx  ImageWithFallback.tsx  InfoTip.tsx  InitialLoadGate.tsx  JobProgress.tsx  Logo.tsx  NextStepButton.tsx  OtherAnalysesCollapse.tsx  PageHeader.tsx  ProjectNav.tsx  QualityDashboard.tsx  RecordDetailDrawer.tsx  RecordsTable.tsx  StepNav.tsx  ToolBadge.tsx  UploadSection.tsx  UploadZone.tsx
apps/web/lib/: api-client.ts  use-pipeline.ts  use-project-id.ts
apps/web/lib/i18n/: en.json  index.tsx  tr.json
apps/web/public/images/: PROMPTS.md
apps/web/public/tools/: README.md
python_pkg/: .gitignore  MANIFEST.in  README.md  pyproject.toml
python_pkg/src/bibexpy/: __init__.py  __main__.py  cli.py
python_pkg/src/bibexpy/_samples/simple_project/: savedrecs.txt
scripts/: build_wheel.ps1  build_wheel.sh  dev-reset.ps1
